--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "mohammadne.github.io",
-  "version": "0.1.0",
+  "name": "terminal-portfolio",
+  "version": "1.0.0",
+  "homepage": "https://mohammadne.github.io/terminal-portfolio",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
